cmake_minimum_required(VERSION 3.9)
project("32blit Tutorials")


# Build configuration; approach this with caution!
if(MSVC)
  add_compile_options("/W4" "/wd4244" "/wd4324" "/wd4458" "/wd4100")
else()
  add_compile_options("-Wall" "-Wextra" "-Wdouble-promotion" "-Wno-unused-parameter")
endif()

set(PROJECT_DISTRIBS README.md)

find_package(32BLIT CONFIG REQUIRED PATHS ../32blit-sdk)

add_subdirectory("c++")

# setup release packages
install (FILES ${PROJECT_DISTRIBS} DESTINATION .)
set (CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
set (CPACK_GENERATOR "ZIP" "TGZ")
include (CPack)