add_subdirectory("01-particle-effects/src")
add_subdirectory("02-path-finding/src")
add_subdirectory("03-multi-channel-sound/src")
add_subdirectory("04-2d-physics/src")
add_subdirectory("05-enemy-ai/src")
add_subdirectory("06-matrices-and-transformations/src")
add_subdirectory("07-drawing-in-3d/src")
add_subdirectory("08-lighting-effects/src")
add_subdirectory("09-faking-mode-7/src")
add_subdirectory("10-raycasting/src")
add_subdirectory("11-demo-effects/src")
add_subdirectory("12-integrating-lua-scripts/src")